# ufal-tf

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  download-libs.sh  linreg.py  main.cpp  tf_protobuf.py
include/: utf.h  utils.h
models/: graph.pb  graph.pbtxt  graph.txt  weights.json
